src/index.css
@import url("https://rsms.me/inter/inter.css");
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;0,900;1,700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  cursor: none;
}

@font-face {
  font-family: "KiMedium";
  src: url("/public/Ki-Medium.ttf");
}

html,
body,
#root {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

body {
  overscroll-behavior-y: none;
  background: #000000;
  font-family: "Inter var", sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  color: white;
}

.special {
  font-family: "KiMedium";
}

a {
  font-family: "KiMedium";
  pointer-events: all;
  color: white;
  text-decoration: none;
}

svg {
  fill: white;
}

/* cursor */
#mouse-circle {
  position: absolute;
  width: 24px;
  height: 24px;
  margin: -12px 0 0 -12px;
  border: 2px solid #ffffff;
  border-radius: 50%;
  pointer-events: none;
}

